- fix horizontal scroll - headline: teaser justify - resposive layout

--- a/src/styles/home-headline-slider.scss
+++ b/src/styles/home-headline-slider.scss
@@ -71,7 +71,7 @@ h2{
         }
         .teaser{
             font-size: 0.8em;
-            line-height: 1em;            
+            line-height: 1.1em;            
         }
         .author{           
             font-size: 0.75em;            
